apps/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.25.8 # {"$imagepolicy": "flux-system:plex"}
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /tv
              name: media-volume
              subPath: tvshows
            - mountPath: /movies
              name: media-volume
              subPath: movies
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: plex-config
        - name: media-volume
          nfs:
            server: nas01.home.arpa.
            path: /mnt/zp01/media
