apps/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  ports:
    - name: http
      port: 32400
      targetPort: 32400
  selector:
    app: plex
