apps/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  labels:
    app: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: plex.home.edgard.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: plex
                port:
                  number: 32400
  tls:
    - hosts:
        - plex.home.edgard.org
      secretName: plex-tls
